--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
 }
 .button-1:hover {
     color: white;
-    background: rgb(71, 118, 230);
-    background: linear-gradient(90deg, rgba(71, 118, 230, 1) 35%, rgba(142, 84, 233, 1) 100%)
+    background-color: #4776E6;
 }
 
 .head1 {
