--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.hero {
+    height: 100vh;
+}
 .button-1 {
     border: 2px solid #4776E6;
 }
@@ -44,6 +46,7 @@
 .btn-2:hover {
     color: #31135E;
 }
+
 .bg-color {
     background: rgb(238,174,202);
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(233,242,252,1) 41%);
